--- a/react-test/src/App.css
+++ b/react-test/src/App.css
@@ -12,3 +12,13 @@
   gap: 10px;
 
 }
+
+.app-wrapper-content{
+  grid-area: c;
+  background-color: cornsilk;
+}
+
+.app-wrapper-content img {
+  height: 100px;
+  width: 1000px;
+}
