--- a/react-test/src/components/NavBar/NavBar.module.css
+++ b/react-test/src/components/NavBar/NavBar.module.css
@@ -1,4 +1,12 @@
 .navbar {
     grid-area: n;
-    background-color:darkgray;
-  }
+    background-color: darkgray;
+}
+
+.item a{
+    color: white;
+}
+
+.item a.active{
+    color: gold;
+}
