--- a/react-test/src/components/NavBar/NavBar.module.css
+++ b/react-test/src/components/NavBar/NavBar.module.css
@@ -1,10 +1,13 @@
 .navbar {
     grid-area: n;
     background-color: darkgray;
+    padding: 20px;
+
 }
 
 .item a{
     color: white;
+    text-decoration: none;
 }
 
 .item a.active{
